src/css/style.css
@import url("https://fonts.googleapis.com/css?family=SF+Pro+Display:300,400,500,700&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "SF Pro Display", sans-serif;
  transition: all 0.3s linear;
}

body {
  width: 100vw !important;
}

.navbar {
  display: flex;
  align-items: center;
  justify-content: space-between;
  background-color: white;
  padding: 10px;
}

.navbar h1 {
  font-size: 24px;
  font-weight: bold;
  color: black;
  margin-left: 10px;
}

.navbar a {
  color: black;
  text-decoration: none;
  margin: 10px;
  transition: color 0.3s;
  display: flex;
  position: relative;
}

.navbar .nav-links a {
    display: inline-block;
}

.navbar .nav-links a:nth-child(-n + 6)::after {
  content: "";
  position: absolute;
  left: 0;
  bottom: 0;
  height: 1.5px;
  width: 0%;
  background-color: rgba(0, 0, 0, 0.889);
  transition: width 0.4s ease;
}

.navbar .nav-links a:nth-child(-n + 6):hover::after {
  width: 100%;
}

.navbar a.btn {
  border: 1px solid black;
  outline: none;
  background-color: white;
  padding: 10px 20px;
  cursor: pointer;
  border-radius: 5px;
  margin-left: 5px;
  margin-right: 5px;
  transition: background-color 0.3s, color 0.3s;
}

.navbar a.btn:hover {
  background-color: black;
  color: white;
}

.navbar a.signup {
  background-color: black;
  color: white;
}

.navbar a.signup:hover {
  background-color: white;
  color: black;
}

.navbar .nav-links {
  display: flex;
  padding: 0 10px;
}

/* #navbar-x-logo {} */
/* } */

.main {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  height: 80vh;
  background-color: white;
  margin-top: 20px;
}

.main h1 {
  font-size: 48px;
  text-align: center;
  margin-bottom: 20px;
}

.main .images {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-evenly;
}

.main img {
  width: 150px;
  height: 150px;
  object-fit: cover;
  margin: 10px;
}

.hero-section-imgs#hero-img-center {
  animation: animate-center-image 3s infinite;
}

.hero-section-imgs.hero-imgs-muted {
  animation: animate-muted-images 3s infinite;
}

@keyframes animate-center-image {
  50% {
    width: 320px;
    height: 320px;
  }

  100% {
    width: 300px;
    height: 300px;
  }
}

@keyframes animate-muted-images {
  50% {
    width: 130;
    height: 130;
  }

  100% {
    width: 160px;
    height: 160px;
  }
}

.main img.hero-imgs-muted {
  opacity: 0.3;
}

.main img#hero-img-center {
  width: 300px;
  height: 300px;
  object-fit: cover;
  margin: 10px;
}

/* trending course */
#webdev {
  display: flex;
  align-items: center;
  justify-content: space-around;
  background-color: #ffffff;
  padding: 30px;
  height: 500px;
  background-image: url("../../assets/images/webdev.png");
  background-position-x: center;
  background-position-y: bottom;
  background-size: 80%;
  background-repeat: no-repeat;
  position: relative;
  margin-top: 20px;
}

.course-overlay {
  width: 100%;
  height: 100%;
  position: absolute;
  background-color: black;
  opacity: 0.1;
}

#webdev .info {
  z-index: 2;
  display: flex;
  flex-direction: column;
  margin-left: 10px;
}

#webdev .info h1 {
  font-size: 48px;
  font-weight: bold;
  margin-bottom: 10px;
}

#webdev .info p {
  font-size: 24px;
  margin-bottom: 10px;
}

#webdev .info span {
  color: red;
  font-size: 36px;
  margin-right: 10px;
}

#webdev .info del {
  margin-left: 10px;
}

#webdev .info button {
  border: none;
  outline: none;
  background-color: blue;
  color: white;
  padding: 10px 20px;
  cursor: pointer;
  border-radius: 5px;
}

#webdev .info button:hover {
  background-color: white;
  color: blue;
}

#webdev .tech {
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 300px;
  margin-top: 10px;
}

#webdev .tech img {
  width: 50px;
  height: 50px;
  object-fit: cover;
}

/* courses */
#courses {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-wrap: wrap !important;
}

#courses h2 {
  font-size: 36px;
  font-weight: bold;
  text-align: center;
  margin-bottom: 20px;
}

.course {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background-color: white;
  /* border-radius: 10px; */
  gap: 20px;
  padding: 10px;
  border: 1px solid black;
  /* margin: 10px; */
  height: 500px;
  width: 50% !important;
}

.course img {
  width: 150px;
  height: 150px;
  object-fit: cover;
  border-radius: 50%;
}

.course-info {
  display: flex;
  flex-direction: column;
  /* margin-left: 10px; */
  /* width: 400px !important; */
  align-items: center;
}

.course-info h3 {
  font-size: 24px;
  font-weight: bold;
  margin-bottom: 10px;
}

.course-info p {
  margin-bottom: 10px;
}

.course-info span {
  color: red;
  font-size: 24px;
  margin-right: 10px;
}

.course-info del {
  margin-left: 10px;
}

.course-info button {
  border: none;
  outline: none;
  background-color: blue;
  color: white;
  padding: 10px 20px;
  cursor: pointer;
  border-radius: 5px;
  width: 150px;
}

.course-info button:hover {
  background-color: white;
  color: blue;
}

.course:not(.alter-course) {
  background-color: black;
  color: white;
}

.course:nth-child(odd) .course-info button {
  background-color: white;
  color: black;
}

.course:nth-child(odd) .course-info button:hover {
  background-color: black;
  color: white;
}

/* footer CSS */
.footer {
  display: flex;
  align-items: center;
  justify-content: space-around;
  background-color: black;
  color: white;
  padding: 20px;
  border-start-start-radius: 10px;
  border-start-end-radius: 10px;
  position: relative;
  padding-bottom: 30px !important;
}

.footer h3 {
  font-size: 24px;
  font-weight: bold;
  margin-bottom: 10px;
}

.footer a {
  color: white;
  text-decoration: none;
  margin: 5px;
}

.footer a:hover {
  color: #f0f0f0;
}

.footer .social {
  display: flex;
  align-items: flex-start;
  flex-direction: column;
  gap: 5px;
}

.footer .social h1 {
  font-size: 36px;
  font-weight: bold;
  color: white;
  margin-bottom: 10px;
  text-align: center;
}

.footer .social svg {
  width: 40px;
  height: 40px;
  object-fit: cover;
  margin: 5px;
  border-radius: 50%;
  background-color: white;
  border: 1px solid white;
  transition: transform 0.3s ease, color 0.3s ease;
}

.footer .social svg:hover {
  transform: scale(1.05);
  background-color: rgba(245, 244, 244, 0.466);
  border: 1px solid rgba(245, 244, 244, 0.466);
  transition: transform 0.3s ease, color 0.3s ease;
}

.footer .contact {
  display: flex;
  flex-direction: column;
}

.contact a {
  color: #b3b3b3;
  text-decoration: none;
}

.contact a:hover {
  text-decoration: underline;
  color: white;
}

.footer .form {
  display: flex;
  flex-direction: column;
  padding-bottom: 30px;
}

.footer .form input,
.footer .form textarea {
  border: none;
  outline: none;
  padding: 10px;
  margin: 5px;
  width: 200px;
  border-radius: 5px;
}

.footer .form button {
  border: none;
  outline: none;
  background-color: blue;
  color: white;
  padding: 10px;
  margin: 5px;
  width: 100px;
  cursor: pointer;
  border-radius: 5px;
}

.footer .form button:hover {
  background-color: white;
  color: blue;
}

.footer .copy {
  text-align: center;
  margin-top: 20px;
  position: absolute;
  bottom: 10px;
  width: 100%;
}

/* This CSS is for testimonial */
.testimonial-container {
  display: flex;
  justify-content: center;
  gap: 50px;
  flex-wrap: wrap;
}

.testimonial-card {
  width: 330px;
  max-width: 700px;
  background-color: black;
  color: white;
  padding: 20px;
  border-radius: 10px;
  text-align: center;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
}

.testimonial-card img {
  width: 120px;
  border-radius: 50%;
  margin-bottom: 10px;
}

.testimonial-quote {
  font-style: italic;
  margin-bottom: 10px;
}

.testimonial-name {
  font-weight: bold;
}

.testimonial-position {
  color: #888;
  font-size: 14px;
}

/* Scroll to top */
#scrollTopBtn {
  display: none;
  position: fixed;
  bottom: 20px;
  right: 20px;
  z-index: 999;
  font-size: 20px;
  background-color: #6f6f6b;
  color: white;
  border: none;
  padding: 10px 15px;
  border-radius: 50%;
  cursor: pointer;
  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
}

#scrollTopBtn:hover {
  background-color: #333;
}

/* Dark Mode Switch Styles  */
.toggle-switch {
  position: relative;
  width: 60px;
  height: 10px;
  margin-left: auto;
  margin-right: 40px;
  margin-bottom: 30px;
  padding: 10px;
  --light: #d8dbe0;
  --dark: #28292c;
  --link: rgb(27, 129, 112);
  --link-hover: rgb(24, 94, 82);
}

.switch-label {
  position: absolute;
  width: 100%;
  height: 30px;
  background-color: var(--dark);
  border-radius: 25px;
  cursor: pointer;
  border: 3px solid var(--dark);
}

.checkbox {
  position: absolute;
  display: none;
}

.slider {
  position: absolute;
  width: 100%;
  height: 100%;
  border-radius: 25px;
  -webkit-transition: 0.3s;
  transition: 0.3s;
}

.checkbox:checked ~ .slider {
  background-color: var(--light);
}

.slider::before {
  content: "";
  position: absolute;
  top: 3px;
  left: 5px;
  width: 20px;
  height: 20px;
  border-radius: 100%;
  -webkit-box-shadow: inset 12px -4px 0px 0px var(--light);
  box-shadow: inset 12px -4px 0px 0px var(--light);
  background-color: var(--dark);
  -webkit-transition: 0.3s;
  transition: 0.3s;
}

.checkbox:checked ~ .slider::before {
  -webkit-transform: translateX(26px);
  -ms-transform: translateX(26px);
  transform: translateX(26px);
  background-color: var(--dark);
  -webkit-box-shadow: none;
  box-shadow: none;
}

/* Dark Mode Switch Styles for Body element*/

body.dark {
  background-color: #222;
}

body.dark h1,
body.dark .support a {
  color: #fff;
}

/* Dark mode for navbar */
body.dark .navbar {
  background-color: #222;
}
body.dark .navbar h1,
body.dark .navbar a {
  color: #fff;
}
body.dark .navbar a.btn {
  background-color: #222;
  color: #fff;
  border-color: #fff;
}
body.dark .navbar a.btn:hover {
  background-color: #fff;
  color: #222;
}

/* Dark mode for main section */
body.dark .main {
  background-color: #222;
  color: #fff;
}

/* Dark mode for courses */
body.dark .course,
body.dark .course-info {
  background-color: #222 !important;
  color: #fff !important;
  border-color: #fff !important;
}
body.dark .course-info button {
  background-color: #fff;
  color: #222;
}
body.dark .course-info button:hover {
  background-color: black;
  color: #fff;
}

/* Dark mode for footer */
body.dark .footer {
  background-color: #181818;
  color: #fff;
}
body.dark .footer a {
  color: #fff;
}

/* Dark mode for testimonial cards */
body.dark .testimonial-card {
  background-color: #fff;
  color: #222;
}

